<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BookingForm">

    <Spinner
        android:id="@+id/bookEndTime"
        android:layout_width="122dp"
        android:layout_height="31dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:entries="@array/timeOption"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/bookStartTime"/>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startTime"
        android:textColor="@color/Black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/bookStartTime"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/bookStartTime" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/endTime"
        android:textColor="@color/Black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/bookEndTime"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/bookEndTime" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="monospace"
        android:text="@string/booking_form"
        android:textColor="#0E0D0D"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/venueID"
        android:textColor="@color/Black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="42dp"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/eventType"
        android:textColor="@color/Black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Spinner
        android:id="@+id/bookType"
        android:layout_width="238dp"
        android:layout_height="24dp"
        android:layout_marginTop="36dp"
        android:entries="@array/eventType"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.785"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/bookID" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="23dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/eventDes"
        android:textColor="@color/Black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/bookDescription"
        android:layout_width="215dp"
        android:layout_height="45dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/description"
        android:inputType="textPersonName"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/bookType" />

    <EditText
        android:id="@+id/bookYear"
        android:layout_width="64dp"
        android:layout_height="35dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/yyyy_hint"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.538" />

    <EditText
        android:id="@+id/bookMonth"
        android:layout_width="64dp"
        android:layout_height="35dp"
        android:layout_marginEnd="28dp"
        android:ems="10"
        android:hint="@string/mm_hint"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <EditText
        android:id="@+id/bookDay"
        android:layout_width="64dp"
        android:layout_height="35dp"
        android:ems="10"
        android:hint="@string/dd_hint"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        app:layout_constraintVertical_bias="0.485" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/year"
        android:textColor="@color/Black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/bookYear"
        app:layout_constraintEnd_toStartOf="@+id/bookYear"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/bookYear" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/month"
        android:textColor="@color/Black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/bookMonth"
        app:layout_constraintEnd_toStartOf="@+id/bookMonth"
        app:layout_constraintTop_toTopOf="@+id/bookMonth" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/day"
        android:textColor="@color/Black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/bookDay"
        app:layout_constraintEnd_toStartOf="@+id/bookDay"
        app:layout_constraintTop_toTopOf="@+id/bookDay" />

    <Spinner
        android:id="@+id/bookStartTime"
        android:layout_width="120dp"
        android:layout_height="31dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:entries="@array/timeOption"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toTopOf="@+id/guideline3"/>

    <CheckBox
        android:id="@+id/bookAgree"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:text="@string/agreement"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/bookBook"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/Empty"
        app:layout_constraintVertical_bias="0.083" />

    <Button
        android:id="@+id/bookBook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:background="@drawable/button_effect"
        android:text="@string/BOOK"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="344dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="274dp" />

    <TextView
        android:id="@+id/bookID"
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:layout_marginTop="46dp"
        android:textColor="@color/Black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/invalidTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TimeError"
        android:textColor="@color/ERRORCOLOR"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/bookEndTime"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/bookStartTime"
        app:layout_constraintTop_toTopOf="@+id/bookStartTime"
        app:layout_constraintVertical_bias="0.507" />

    <TextView
        android:id="@+id/invalidDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DateError"
        android:textColor="@color/ERRORCOLOR"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <TextView
        android:id="@+id/Empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/EmptyError"
        android:textColor="@color/ERRORCOLOR"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.543"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/isBooked"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/isBooked"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/BookedError"
        android:textColor="@color/ERRORCOLOR"
        android:textSize="14sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookEndTime"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/isChecked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AgreeError"
        android:textColor="@color/ERRORCOLOR"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/bookAgree" />

    <TextView
        android:id="@+id/desLengtherr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desLength"
        android:textColor="@color/ERRORCOLOR"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/bookDescription"
        app:layout_constraintEnd_toEndOf="@+id/bookDescription"
        app:layout_constraintStart_toStartOf="@+id/bookDescription" />

    <TextView
        android:id="@+id/bookAdy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/bookAdy"
        android:textColor="@color/ERRORCOLOR"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.65"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/isChecked" />

</androidx.constraintlayout.widget.ConstraintLayout>