<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenu">

    <LinearLayout
        android:id="@+id/left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:orientation="vertical">
        <Button
            android:id="@+id/bookbtn"
            android:layout_width="125dp"
            android:layout_height="148dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/book_effect" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/alfa_slab_one"
            android:text="@string/bookmenu"
            android:textAlignment="center"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:layout_toEndOf="@+id/left"
        android:orientation="vertical"
        >
        <Button
            android:id="@+id/noticebtn"
            android:layout_width="125dp"
            android:layout_height="148dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/notice_effect"
            android:textSize="22sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alfa_slab_one"
            android:text="@string/historymenu"
            android:textAlignment="center"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:layout_toEndOf="@+id/center"
        android:baselineAligned="false"
        android:orientation="vertical"
        >

        <Button
            android:id="@+id/logout"
            android:layout_width="125dp"
            android:layout_height="148dp"
            android:background="@drawable/logout_effect"
            android:textSize="22sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alfa_slab_one"
            android:text="@string/logoutmenu"
            android:textAlignment="center"
            android:textSize="20sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/robot"
        android:layout_width="130dp"
        android:layout_height="250dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="60dp"
        android:src="@mipmap/robot"
        android:contentDescription="@string/mmu_robot" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@+id/robot"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/kavoon"
            android:text="@string/showID"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:fontFamily="@font/kavoon"
            android:textAlignment="center"
            android:textColor="@color/Black"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>